--- a/017 webpack/src/css/index.css
+++ b/017 webpack/src/css/index.css
@@ -6,4 +6,11 @@
 	background-image: url("../images/chenman.jpg");
 	width: 1280px;
 	height: 853px;
+	transform: rotate(45deg);
+    box-shadow: 1px 1px 0 rgba(0,0,0,.25);
+}
+#nav {
+    width: 100%;
+    height: 30px;
+    background-color: #fff;
 }
